--- a/src/styles.scss
+++ b/src/styles.scss
@@ -912,22 +912,31 @@ ion-card-content {
     --border-radius: 12px;
   }
 
-  // Mobile - bottom sheet style
+  // Mobile - constrained height
   @media (max-width: 768px) {
     --width: 100%;
-    --height: 90vh;
-    --max-height: 90vh;
+    --height: 85vh;
+    --max-height: 85vh;
     --border-radius: 12px 12px 0 0;
 
     align-items: flex-end;
+
+    &::part(content) {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 85vh;
+      max-height: 85vh;
+    }
 
     .ion-page {
       position: relative;
       display: flex;
       flex-direction: column;
-      contain: layout size style;
-      height: 100%;
-      max-height: 90vh;
+      height: 85vh;
+      max-height: 85vh;
+      overflow: hidden;
     }
   }
 
